[package]
name = "kube-cache"
version = "0.1.0"
edition = "2021"

[dependencies]
# CORE INFRASTRUCTURE
# Pin 'home' and 'base64ct' to avoid "Rust 2024 Edition" errors
home = "=0.5.9"
base64ct = "=1.6.0"

# Kubernetes (Aligned Versions)
# We align k8s-openapi to 0.23.0 to match what 'kube' uses internally
kube = { version = "=0.96.0", features = ["runtime", "derive", "client"] }
k8s-openapi = { version = "0.23.0", features = ["v1_26"] }

# AWS / S3
aws-config = "1.1.7"
aws-sdk-s3 = "1.17.0"

# Security
rustls = { version = "0.23", features = ["ring"] }
webpki-roots = "0.26"

# Utilities
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
axum = "0.7"
prometheus = "0.13"