[workspace]
resolver = "2"
members = [
    "operator",
    "sentry/sentry",
    "sentry/sentry-common",
    "sentry/sentry-ebpf"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[workspace.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-ebpf = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
anyhow = "1"
which = "4.0"
libc = "0.2"
