[package]
name = "sentry-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
sentry-common = { path = "../sentry-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "sentry"
path = "src/main.rs"
