[package]
name = "sentry"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
anyhow = "1"
sentry-common = { path = "../sentry-common", features = ["user"] }
prometheus = "0.13"
tiny_http = "0.12"
bytes = "1"
libc = "0.2"

[[bin]]
name = "sentry"
path = "src/main.rs"
